# caches-pfa

./: README  README.md  conventions.txt
PAPI/: Makefile  README  example.c  natif.c
cassis/: CMakeLists-2.txt  CMakeLists.txt  README  entrelacement.lua  makefile  manage_threads.lua  non_regression_tests.sh  tests.sh
cassis/MAQAO/: README  follow_instr  get_instr_from_line.sh  get_traces.sh  test.c
cassis/architecture/: archi_AMD.cassis.xml  archi_i5.xml  archi_maker.xsl  architest.cassis.xml  architest.xml  architest_8_cores.xml
cassis/bench/: basic_stats.sh  non_regression_tests.sh  speed_test.sh
cassis/bench/PAPI/: Makefile  res_honorat_32bits.txt  test.c
cassis/bench/PAPI/papi_avails/: ahonorat_papi_native_avail.txt  gmarait_papi_native_avail.txt
cassis/bench/architectures/: architest.cassis_1.xml  architest.cassis_2.xml  architest.cassis_4.xml  architest.cassis_7.xml  architest_INTEL.cassis.xml  architest_MESI.cassis.xml  architest_MSI.cassis.xml
cassis/bench/basic_stats/: plot_stats.py
cassis/bench/non_regression/: bench.sh  non_regression.txt
cassis/bench/speed_test/: bench.sh  functions  plot_stats.py  values
cassis/benchmarks/: makefile  trace3
cassis/benchmarks/architectures/: architest.cassis_1.xml  architest.cassis_10.xml  architest.cassis_2.xml  architest.cassis_3.xml  architest.cassis_4.xml  architest.cassis_6.xml  architest.cassis_7.xml  architest.cassis_9.xml
cassis/documentation/: doxygen.conf  makefile
cassis/documentation/man/: cassis-xml.1  cassis.1
cassis/man/: cassis-help.1  cassis.1
cassis/non_regression/: non_regression.txt  trace0  trace2
cassis/non_regression/architectures/: architest.cassis_6.xml  architest.cassis_9.xml
cassis/src/: Makefile  conf.make  main.c  main_automate.c  main_test.c  makefile
cassis/src/automate/: coherence.c  coherence.h
cassis/src/core/: Makefile  add_line_hierarchy.c  architecture.c  block.c  cache.c  directory_manager.c  line.c  makefile  node.c  option.c  trace.c
cassis/src/core-automate/: Makefile  add_line_hierarchy.c  architecture.c  block.c  cache.c  directory_manager.c  line.c  node.c  option.c
cassis/src/gen-automata/: coherence.c  coherence.sm
cassis/src/gen-automate/: Makefile  coherence.c  coherence.sm  coherence_sm.c
cassis/src/includes/: add_line_hierarchy.h  architecture.h  block.h  cache.h  coherence.h  coherence_sm.h  common_types.h  conf.make  directory_manager.h  line.h  node.h  option.h  statemap.h  test_architecture.h  test_replacement.h  test_without_parser.h  trace.h
cassis/src/includes-automate/: add_line_hierarchy.h  block.h  cache.h  coherence.h  common_types.h  line.h  option.h  trace.h
cassis/src/interweaving/: README  a.out  brouillon.lua  fonction1.c  fonction1.h  scriptclua.c
cassis/src/others/: makefile  node.c  trace.c
cassis/src/state-machine/: coherence.c  coherence.sm  makefile
cassis/src/tests/: Makefile  makefile  test_architecture.P  test_architecture.c  test_replacement.P  test_replacement.c  test_replacement.c~  test_without_parser.P  test_without_parser.c
cassis/src/tests-automate/: test_replacement.c  test_without_parser.c
cassis/tests/: basic_stats.sh  non_regression_tests.sh  speed_test.sh
cassis/tests/PAPI/: README  natif.c
cassis/tests/PAPI/papi_avails/: ahonorat_papi_avail.txt  gmarait_papi_avail.txt  gpichon_papi_avail.txt
cassis/tests/architectures/: archi_32bits_honorat.cassis.xml  architest.cassis_10.xml  architest.cassis_3.xml  architest.cassis_5.xml  architest.cassis_8.xml  architest_MESI.cassis.xml  architest_MSI.cassis.xml
cassis/tests/basic_stats/: functions  plot_stats.py
cassis/tests/non_regression/: bench.sh  non_regression.txt  out  trace1  unitary_tests.sh
cassis/tests/speed_test/: bench.sh  test_1000.c  test_10000.c  test_100000.c  test_5000.c  test_50000.c
docs/: 3-client.cr  4-client.cr  4-respo.cr  5-client.cr  conventions.txt  rapport2_dbarthou.txt
docs/cahier_charges/: choix.tex  desc_g.tex  desc_t.tex  details.tex  main.aux  main.tex  main.tex~  main.toc  opti.tex  pageGarde.tex  pageGarde.tex~
docs/final_rapport/: Makefile  architecture.tex  automates.tex  coherence.tex  conc.tex  entrelacement.tex  generalites.tex  intro.tex  lecture_trace.tex  limites.tex  man.tex  parametrisation.tex  plan.txt  presentationCassis.tex  rapport.bib  rapport.tex  tutoriel.tex  validation.tex
docs/presentation/: makefile  presentation.tex
docs/rapport/: Makefile  aboutCaches.tex  aboutCassim.tex  entreeXML.tex  intro.tex  introduction.tex  pageGarde.tex  rapport.bib  rapport.tex
docs/reunions/: 1-client.md  1-respo.md  2-respo.md  3-respo.cr  5-respo.cr  6-client.md  6-respo.md
docs/schemas/: L2_and_L3_inclusives.dia  base.dia
docs/soutenance/: architecture.tex  caches.tex  coherence.tex  entrelacement.tex  introduction.tex  makefile  plan.txt  presentation.tex  simulateur.tex  validation.tex
idea_simulator/: README  config.in  makefile  tests.sh
idea_simulator/MAQAO/: README  instrumentation.lua  tests.sh  trace0  trace1  trace2  trace3
idea_simulator/benchmarks/: rapport.tex  tests.sh
idea_simulator/data/: archicremi.xml  architest_4_levels.xml  architest_archi.xml  dell.txt  file.txt  hierarchy.txt  test1.txt
idea_simulator/documentation/: Makefile  doxygen.conf  makefile
idea_simulator/man/: cassis-help.1
idea_simulator/read_trace/: makefile  read_traces.c  read_traces.h  test  test.c  thread1  thread2  thread3  thread4
idea_simulator/res/: archi_maker.xsl
idea_simulator/src/: add_line.c  add_line.h  add_line_hierarchy.c  add_line_hierarchy.h  architecture.c  architecture.h  block.c  block.h  cache.c  cache.h  def_architecture.c  def_architecture.h  line.c  line.h  list.c  list.h  main.c  main_test.c  makefile  replace_line.c  replace_line.h  search_line.c  search_line.h  test_2caches.c  test_cache1.c  trace.c  trace.h
idea_simulator/tests/: architest_gilles.xml  lecture_fichier_1cache.c  test_2caches.c  test_architecture.c  test_cache1.c  test_load.c  (+2 more)
test_lua/: brouillon.lua~  fonction1.c~  fonction1.h~  main.c  main.c~  read.lua  read.lua~  scriptclua.h  test.txt
(+45 files in other folders)
